# content-hub

./: .gitignore  AGENTS.md  README.md  REFACTOR_GUIDE.md  dummy-data.txt  py_client.py  ruff.toml  script.py  temp.txt
content/response_integrations/custom/test_integration/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/custom/test_integration/actions/: get_details.py  get_details.yaml  ping.py  ping.yaml
content/response_integrations/custom/test_integration/core/: some_manager.py
content/response_integrations/google/active_directory/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/active_directory/actions/: AddUserToGroup.py  AddUserToGroup.yaml  ChangeHostOU.py  ChangeHostOU.yaml  ChangeUserOU.py  ChangeUserOU.yaml  DisableAccount.py  DisableAccount.yaml  DisableComputer.py  DisableComputer.yaml  EnableAccount.py  EnableAccount.yaml  EnableComputer.py  EnableComputer.yaml  EnrichEntities.py  EnrichEntities.yaml  ForcePasswordUpdate.py  ForcePasswordUpdate.yaml  GetGroupMembers.py  GetGroupMembers.yaml  GetManagerContactDetails.py  GetManagerContactDetails.yaml  IsUserInGroup.py  IsUserInGroup.yaml  ListUserGroups.py  ListUserGroups.yaml  Ping.py  Ping.yaml  ReleaseLockedAccount.py  ReleaseLockedAccount.yaml  RemoveUserFromGroup.py  RemoveUserFromGroup.yaml  SearchActiveDirectory.py  SearchActiveDirectory.yaml  SetUserPassword.py  SetUserPassword.yaml  UpdateHostAttribute.py  UpdateHostAttribute.yaml  UpdateUserAttribute.py  UpdateUserAttribute.yaml
content/response_integrations/google/active_directory/core/: ActiveDirectoryCommon.py  ActiveDirectoryManager.py  ActiveDirectoryParser.py  datamodels.py  utils.py
content/response_integrations/google/active_directory/resources/: enrich_entities_JsonResult_example.json
content/response_integrations/google/active_directory/tests/: conftest.py  test_enrich_entities_action.py  test_manager.py
content/response_integrations/google/active_directory/widgets/: EnrichEntities.yaml  GetGroupMembers.html  GetGroupMembers.yaml  GetManagerContactDetails.yaml  IsUserInGroup.yaml  ListUserGroups.yaml  SearchActiveDirectory.html  SearchActiveDirectory.yaml
content/response_integrations/google/alexa/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/alexa/actions/: GetUrlIRank.py  GetUrlIRank.yaml  GetUrlRank.yaml  Ping.py  Ping.yaml
content/response_integrations/google/alexa/core/: AlexaManager.py
content/response_integrations/google/alexa/tests/: config.json
content/response_integrations/google/alexa/widgets/: GetUrlRank.yaml
content/response_integrations/google/algo_sec/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/algo_sec/actions/: AllowIP.py  AllowIP.yaml  BlockIP.py  BlockIP.yaml  ListTemplates.py  ListTemplates.yaml  Ping.py  Ping.yaml  WaitForChangeRequestStatusUpdate.py  WaitForChangeRequestStatusUpdate.yaml
content/response_integrations/google/algo_sec/core/: AlgoSecExceptions.py  AlgoSecManager.py  (+4 more)
content/response_integrations/google/alien_vault_anywhere/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/alien_vault_appliance/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/amazon_macie/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/anomali/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/anomali_staxx/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/anomali_threat_stream/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/api_void/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/app_sheet/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/arc_sight_logger/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/arcsight/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/area1/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/armis/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/attivo/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/auto_focus/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/aws_cloud_watch/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/aws_guard_duty/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/aws_security_hub/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/awswaf/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/axonius/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/azure_monitor/: definition.yaml  pyproject.toml  pytest_output.txt  release_notes.yaml
content/response_integrations/google/azure_security_center/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/blue_liv/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/bmc_remedy_itsm/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/bulk_who_is/: definition.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/ca_service_desk/: definition.yaml  ontology_mapping.yaml  pyproject.toml  release_notes.yaml
content/response_integrations/google/cb_defense/: definition.yaml  pyproject.toml  release_notes.yaml
(+9034 files in other folders)
