[project]
name = "TestIntegration"
version = "4.0"
description = "Test Integration Description!"
requires-python = ">=3.11"
dependencies = [
    "requests==2.32.5",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
soar-sdk = { git = "https://github.com/chronicle/soar-sdk.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-json-report>=1.5.0",
    "soar-sdk",
]
