[project]
name = "Alexa"
version = "9.0"
description = "The Alexa Web Information Service (AWIS) offers a platform for creating innovative Web solutions and services based on Alexa's vast information about web sites."
requires-python = ">=3.11,<3.12"
dependencies = [
 "defusedxml==0.7.1",
 "pytest-mock>=3.15.1",
 "requests>=2.33.1",
]

[dependency-groups]
dev = [
 "pytest>=9.0.3",
 "pytest-json-report>=1.5.0",
 "soar-sdk",
]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
soar-sdk = { git = "https://github.com/chronicle/soar-sdk.git" }
