[project]
name = "AlienVaultAppliance"
version = "27.0"
description = "USM Appliance includes the essential security capabilities and continuously delivered threat intelligence needed to quickly and easily identify and respond to threats in your physical and virtual infrastructure."
requires-python = ">=3.11,<3.12"
dependencies = [ "arrow>=1.4.0", "bs4>=0.0.2", "dateparser==1.2.0", "pytest-mock>=3.15.1", "pytz==2024.1", "requests>=2.32.4", "simplejson==3.19.2",]

[dependency-groups]
dev = [ "environmentcommon", "pytest>=9.0.3", "pytest-json-report>=1.5.0", "soar-sdk", "tipcommon",]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources.soar-sdk]
git = "https://github.com/chronicle/soar-sdk.git"

[tool.uv.sources.environmentcommon]
path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.3-py3-none-any.whl"

[tool.uv.sources.tipcommon]
path = "../../../../packages/tipcommon/whls/TIPCommon-2.3.5-py3-none-any.whl"
