[project]
name = "AmazonMacie"
version = "11.0"
description = "Amazon Macie is a powerful security and compliance service that provides an automatic method to detect, identify, and classify data within your AWS account."
requires-python = ">=3.11,<3.12"
dependencies = [ "boto3==1.35.17", "environmentcommon", "pytz>=2026.1.post1", "tipcommon",]

[dependency-groups]
dev = [ "pytest>=9.0.3", "pytest-json-report>=1.5.0", "soar-sdk",]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources.tipcommon]
path = "../../../../packages/tipcommon/whls/TIPCommon-1.0.12-py2.py3-none-any.whl"

[tool.uv.sources.environmentcommon]
path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.1-py2.py3-none-any.whl"

[tool.uv.sources.soar-sdk]
git = "https://github.com/chronicle/soar-sdk.git"
