[project]
name = "ArcSightLogger"
version = "12.0"
description = "ArcSight Logger is a comprehensive solution for security event log management."
requires-python = ">=3.11,<3.12"
dependencies = [ "pycryptodome==3.20.0", "requests==2.32.4", "tipcommon",]

[dependency-groups]
dev = [ "pytest>=9.0.3", "pytest-json-report>=1.5.0", "soar-sdk",]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources.tipcommon]
path = "../../../../packages/tipcommon/whls/TIPCommon-1.0.11-py2.py3-none-any.whl"

[tool.uv.sources.soar-sdk]
git = "https://github.com/chronicle/soar-sdk.git"
