[project]
name = "Area1"
version = "10.0"
description = "Area 1 Horizon, a cloud-based service that stops phishing attacks across all traffic vectors—email, web, or network. Protects users against phishing emails using a cloud-based MTA or cloud APIs/connectors. Protects users against web-based phishing campaigns through a globally distributed, recursive DNS service. Shut downs phishing attacks at your network edge."
requires-python = ">=3.11,<3.12"
dependencies = [ "arrow>=1.4.0", "pytest-mock>=3.15.1", "requests>=2.32.4",]

[dependency-groups]
dev = [ "environmentcommon", "pytest>=9.0.3", "pytest-json-report>=1.5.0", "soar-sdk", "tipcommon",]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources.soar-sdk]
git = "https://github.com/chronicle/soar-sdk.git"

[tool.uv.sources.environmentcommon]
path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.3-py3-none-any.whl"

[tool.uv.sources.tipcommon]
path = "../../../../packages/tipcommon/whls/TIPCommon-2.3.5-py3-none-any.whl"
