[project]
name = "Armis"
version = "16.0"
description = "Agentless and passive security that sees, identifies, and classifies every device, tracks behavior, identifies threats, and takes action automatically to protect critical information and systems."
requires-python = ">=3.11,<3.12"
dependencies = [ "arrow>=1.4.0", "environmentcommon", "requests==2.32.4", "tipcommon",]

[dependency-groups]
dev = [ "pytest>=9.0.3", "pytest-json-report>=1.5.0", "soar-sdk",]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources.environmentcommon]
path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.0-py3-none-any.whl"

[tool.uv.sources.tipcommon]
path = "../../../../packages/tipcommon/whls/TIPCommon-1.0.10-py3-none-any.whl"

[tool.uv.sources.soar-sdk]
git = "https://github.com/chronicle/soar-sdk.git"
