[project]
name = "AWSCloudWatch"
version = "10.0"
description = "Amazon CloudWatch is a monitoring and observability service built for DevOps engineers, developers, site reliability engineers (SREs), and IT managers. CloudWatch provides you with data and actionable insights to monitor your applications, respond to system-wide performance changes, optimize resource utilization, and get a unified view of operational health. CloudWatch collects monitoring and operational data in the form of logs, metrics, and events, providing you with a unified view of AWS resources, applications, and services that run on AWS and on-premises servers. You can use CloudWatch to detect anomalous behavior in your environments, set alarms, visualize logs and metrics side by side, take automated actions, troubleshoot issues, and discover insights to keep your applications running smoothly."
requires-python = ">=3.11,<3.12"
dependencies = [ "boto3==1.35.4", "botocore==1.35.4", "tipcommon",]

[dependency-groups]
dev = [ "pytest>=9.0.3", "pytest-json-report>=1.5.0", "soar-sdk",]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources.tipcommon]
path = "../../../../packages/tipcommon/whls/TIPCommon-1.0.10-py3-none-any.whl"

[tool.uv.sources.soar-sdk]
git = "https://github.com/chronicle/soar-sdk.git"
