[project]
name = "AWSGuardDuty"
version = "13.0"
description = "Amazon GuardDuty informs you of the status of your AWS environment by producing security findings. GuardDuty helps to detect and manage threats to your AWS system."
requires-python = ">=3.11,<3.12"
dependencies = [ "boto3==1.35.10", "botocore==1.35.10", "environmentcommon", "pytest-mock>=3.15.1",]

[dependency-groups]
dev = [ "environmentcommon", "pytest>=9.0.3", "pytest-json-report>=1.5.0", "soar-sdk", "tipcommon",]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources.environmentcommon]
path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.1-py2.py3-none-any.whl"

[tool.uv.sources.soar-sdk]
git = "https://github.com/chronicle/soar-sdk.git"

[tool.uv.sources.tipcommon]
path = "../../../../packages/tipcommon/whls/TIPCommon-2.3.6-py3-none-any.whl"
