# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "azure_monitor"
version = "4.0"
description = "Azure Monitor is a comprehensive monitoring solution for collecting, analyzing, and responding to monitoring data from your cloud and on-premises environments."
requires-python = ">=3.11,<3.12"
dependencies = [ "environmentcommon", "python-dateutil>=2.9.0.post0", "requests==2.32.5",]

[dependency-groups]
dev = [
 "pytest-mock",
 "integration-testing",
 "anyio",
 "cachetools",
 "certifi",
 "environmentcommon",
 "google-api-core",
 "google-api-python-client",
 "google-auth",
 "google-auth-httplib2",
 "googleapis-common-protos",
 "h11",
 "httpcore",
 "httplib2",
 "httpx",
 "idna",
 "proto-plus",
 "pyasn1",
 "pyasn1-modules",
 "pyparsing",
 "pytest>=9.1.0",
 "pytest-json-report>=1.5.0",
 "requests",
 "rsa",
 "sniffio",
 "soar-sdk",
 "tipcommon",
 "typing-extensions",
 "uritemplate",
 "urllib3",
 "pyyaml",
]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources.soar-sdk]
git = "https://github.com/chronicle/soar-sdk.git"

[tool.uv.sources.environmentcommon]
path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.3-py3-none-any.whl"

[tool.uv.sources.tipcommon]
path = "../../../../packages/tipcommon/whls/TIPCommon-2.2.12-py2.py3-none-any.whl"

[tool.uv.sources.httplib2]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/httplib2-0.31.0-py3-none-any.whl"

[tool.uv.sources.sniffio]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/sniffio-1.3.1-py3-none-any.whl"

[tool.uv.sources.requests]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/requests-2.32.5-py3-none-any.whl"

[tool.uv.sources.httpx]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/httpx-0.28.1-py3-none-any.whl"

[tool.uv.sources.rsa]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/rsa-4.9.1-py3-none-any.whl"

[tool.uv.sources.certifi]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/certifi-2025.10.5-py3-none-any.whl"

[tool.uv.sources.proto-plus]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/proto_plus-1.26.1-py3-none-any.whl"

[tool.uv.sources.google-api-core]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/google_api_core-2.28.1-py3-none-any.whl"

[tool.uv.sources.h11]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/h11-0.16.0-py3-none-any.whl"

[tool.uv.sources.idna]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/idna-3.11-py3-none-any.whl"

[tool.uv.sources.pyasn1]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/pyasn1-0.6.1-py3-none-any.whl"

[tool.uv.sources.google-auth-httplib2]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/google_auth_httplib2-0.2.0-py2.py3-none-any.whl"

[tool.uv.sources.google-auth]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/google_auth-2.42.0-py2.py3-none-any.whl"

[tool.uv.sources.pyparsing]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/pyparsing-3.2.5-py3-none-any.whl"

[tool.uv.sources.urllib3]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/urllib3-2.5.0-py3-none-any.whl"

[tool.uv.sources.httpcore]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/httpcore-1.0.9-py3-none-any.whl"

[tool.uv.sources.cachetools]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/cachetools-6.2.1-py3-none-any.whl"

[tool.uv.sources.typing-extensions]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/typing_extensions-4.15.0-py3-none-any.whl"

[tool.uv.sources.uritemplate]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/uritemplate-4.2.0-py3-none-any.whl"

[tool.uv.sources.google-api-python-client]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/google_api_python_client-2.185.0-py3-none-any.whl"

[tool.uv.sources.googleapis-common-protos]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/googleapis_common_protos-1.71.0-py3-none-any.whl"

[tool.uv.sources.anyio]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/anyio-4.11.0-py3-none-any.whl"

[tool.uv.sources.pyasn1-modules]
path = "../../../../../tip-marketplace/Integrations/AzureMonitor/Dependencies/pyasn1_modules-0.4.2-py3-none-any.whl"

[tool.uv.sources.integration-testing]
path = "../../../../packages/integration_testing_whls/integration_testing-2.2.0-py3-none-any.whl"
