[project]
name = "azure_monitor"
version = "4.0"
description = "Azure Monitor is a comprehensive monitoring solution for collecting, analyzing, and responding to monitoring data from your cloud and on-premises environments."
requires-python = ">=3.11,<3.12"
dependencies = [ "environmentcommon", "python-dateutil>=2.9.0.post0", "requests==2.32.5", "tipcommon",]

[dependency-groups]
dev = [ "pytest-mock", "integration-testing", "anyio", "cachetools", "certifi", "environmentcommon", "google-api-core", "google-api-python-client", "google-auth", "google-auth-httplib2", "googleapis-common-protos", "h11", "httpcore", "httplib2", "httpx", "idna", "proto-plus", "pyasn1", "pyasn1-modules", "pyparsing", "pytest>=9.1.0", "pytest-json-report>=1.5.0", "requests", "rsa", "sniffio", "soar-sdk", "typing-extensions", "uritemplate", "urllib3", "pyyaml",]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources.soar-sdk]
git = "https://github.com/chronicle/soar-sdk.git"

[tool.uv.sources.environmentcommon]
path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.3-py3-none-any.whl"

[tool.uv.sources.tipcommon]
path = "../../../../packages/tipcommon/whls/TIPCommon-2.2.14-py2.py3-none-any.whl"

[tool.uv.sources.integration-testing]
path = "../../../../packages/integration_testing_whls/integration_testing-2.2.0-py3-none-any.whl"
