[project]
name = "AzureSecurityCenter"
version = "16.0"
description = "Azure Security Center is a unified infrastructure security management system that strengthens the security posture of your data centers, and provides advanced threat protection across your hybrid workloads in the cloud - whether they're in Azure or not - as well as on premises."
requires-python = ">=3.11,<3.12"
dependencies = [ "environmentcommon", "requests==2.32.4", "tipcommon",]

[dependency-groups]
dev = [ "integration-testing", "pytest>=9.0.3", "pytest-json-report>=1.5.0", "soar-sdk",]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources.environmentcommon]
path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.2-py2.py3-none-any.whl"

[tool.uv.sources.tipcommon]
path = "../../../../packages/tipcommon/whls/TIPCommon-2.2.12-py2.py3-none-any.whl"

[tool.uv.sources.soar-sdk]
git = "https://github.com/chronicle/soar-sdk.git"

[tool.uv.sources.integration-testing]
path = "../../../../packages/integration_testing_whls/integration_testing-2.2.12-py3-none-any.whl"
