[project]
name = "BMCRemedyITSM"
version = "13.0"
description = "BMC Remedy ITSM is industry-leading, service management that transforms the best-practice ITSM principles you've come to appreciate from Remedy to provide unprecedented ROI on your choice of cloud."
requires-python = ">=3.11,<3.12"
dependencies = [ "environmentcommon", "requests==2.32.4", "tipcommon",]

[dependency-groups]
dev = [ "integration-testing", "pytest>=9.0.3", "pytest-json-report>=1.5.0", "soar-sdk",]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources.environmentcommon]
path = "../../../../packages/envcommon/whls/EnvironmentCommon-1.0.2-py2.py3-none-any.whl"

[tool.uv.sources.tipcommon]
path = "../../../../packages/tipcommon/whls/TIPCommon-2.2.11-py2.py3-none-any.whl"

[tool.uv.sources.soar-sdk]
git = "https://github.com/chronicle/soar-sdk.git"

[tool.uv.sources.integration-testing]
path = "../../../../packages/integration_testing_whls/integration_testing-2.2.19-py3-none-any.whl"
