[project]
name = "BulkWhoIs"
version = "19.0"
description = "Bulk Whois API is based on a rich experience that the company gained by providing online services to thousands of users worldwide since 2010. For last several years, WHOIS and domain systems are our daily bread. The service knows how they work and how to use them, so that you can care less about it."
requires-python = ">=3.11,<3.12"
dependencies = [ "requests==2.32.4", "tipcommon",]

[dependency-groups]
dev = [ "pytest>=9.0.3", "pytest-json-report>=1.5.0", "soar-sdk",]

[tool.uv]
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources.tipcommon]
path = "../../../../packages/tipcommon/whls/TIPCommon-1.0.11-py2.py3-none-any.whl"

[tool.uv.sources.soar-sdk]
git = "https://github.com/chronicle/soar-sdk.git"
